syntax="proto3";

package cliente;

message Order{
  string id = 1;
  string nombre = 2;
  int32 valor = 3;
  string tienda = 4;
  string destino = 5;
  string tipoCliente = 6;
  bool prioritario = 7;
}

message Camion{
  string Tipo = 1;
  Order orden1 =2;
  Order orden2 =3;
  int32 tiempoEspera = 4;
}

message CodigoSeguimiento{
  int32 codigo =1;
}

message Sample{
  string sample = 1;
}

message Confirmation{
  string ConfirmationMessage= 1;
}

message Status{
  string state = 1;
}

service Solicitud {
  rpc ShowOrder(Order) returns (Sample){}
  rpc MakeOrder(Order) returns (Confirmation){}
  rpc GetStatus(CodigoSeguimiento) returns (Status){}
  rpc RetirarOrden(Camion) returns (Camion){}
  rpc DevolverOrden(Camion) returns (Camion){} 
}

